ok last fixes me thinks

--- a/detect.ipynb
+++ b/detect.ipynb
@@ -761,7 +761,7 @@
         "\n",
         "# Plot AI-generated essays in blue with higher transparency\n",
         "ax.scatter(embeddings_3d[:-1, 0], embeddings_3d[:-1, 1], embeddings_3d[:-1, 2],\n",
-        "          c='blue', label='AI Generated', alpha=0.2)\n",
+        "          c='blue', label='AI Generated', alpha=0.1)\n",
         "\n",
         "# Plot student essay in red with much larger marker and no transparency\n",
         "student_point = embeddings_3d[-1]\n",
@@ -849,14 +849,19 @@
         "\n",
         "outlier_count = 0\n",
         "semantic_scores = []\n",
+        "threshold = 0.85\n",
+        "\n",
         "for i, essay in enumerate(tqdm(essay_list[1:], desc=\"comparing essays\")):\n",
         "    results = faiss_analyzer.compare_texts(student_essay, [essay])\n",
         "    score = results['semantic_similarity'][0]\n",
         "    semantic_scores.append(score)\n",
-        "    if score > 0.85:\n",
-        "        print(f\"Essay {i+1} has suspicious similarity score: {score:.3f}\")\n",
+        "\n",
+        "    # only print if suspicious\n",
+        "    if score > threshold:\n",
+        "        print(f\"essay {i+1} suspiciously high semantic sim: {score:.3f}\")\n",
         "        outlier_count += 1\n",
-        "print(f\"\\nFound {outlier_count} essays with similarity scores > 0.85\")"
+        "\n",
+        "print(f\"\\nfound {outlier_count} essays > {threshold} semantic similarity\\n\")"
       ]
     },
     {
@@ -1012,7 +1017,7 @@
         "ax = fig.add_subplot(111, projection='3d')\n",
         "\n",
         "# Plot AI-generated essays in blue\n",
-        "ax.scatter(embeddings_3d[:-1, 0], embeddings_3d[:-1, 1], embeddings_3d[:-1, 2], c='blue', label='AI Generated')\n",
+        "ax.scatter(embeddings_3d[:-1, 0], embeddings_3d[:-1, 1], embeddings_3d[:-1, 2], c=semantic_scores, label='AI Generated')\n",
         "\n",
         "# Plot student essay in red\n",
         "ax.scatter(embeddings_3d[-1, 0], embeddings_3d[-1, 1], embeddings_3d[-1, 2], c='red', label='Student Essay')\n",
@@ -3133,17 +3138,17 @@
         "# Calculate syntactic similarity\n",
         "# Get syntactic similarity scores between essays using FAISS analyzer\n",
         "syntactic_scores = []\n",
+        "syntactic_threshold = 0.80\n",
+        "outlier_count = 0\n",
         "for i, essay in enumerate(essay_list[1:]):  # Compare against student essay\n",
         "    results = faiss_analyzer.compare_texts(student_essay, [essay])\n",
         "    syntactic_scores.append(results['syntactic_similarity'][0])\n",
+        "    if score > syntactic_threshold:\n",
+        "        print(f\"essay {i+1} high syntactic similarity: {score:.3f}\")\n",
+        "        outlier_count += 1\n",
         "\n",
-        "# print(f\"High syntactic similarity scores (>0.8, compared to original essay):\")\n",
-        "# outlier_count = 0\n",
-        "# for i, score in enumerate(syntactic_scores):\n",
-        "#     if score > 0.8:\n",
-        "#         print(f\"Essay {i+1}: {score:.3f}\")\n",
-        "#         outlier_count += 1\n",
-        "# print(f\"\\nTotal essays with high syntactic similarity: {outlier_count}\")"
+        "print(\n",
+        "    f\"\\ntotal {outlier_count} essays with syntactic sim > {syntactic_threshold}\\n\")"
       ]
     },
     {
@@ -3199,11 +3204,11 @@
         "\n",
         "# Plot AI-generated essays in blue\n",
         "ax.scatter(embeddings_3d[:-1, 0], embeddings_3d[:-1, 1], embeddings_3d[:-1, 2],\n",
-        "           c='blue', label='AI Generated', s=50)\n",
+        "           c=syntactic_scores, label='AI Generated', s=50, alpha=0.1)\n",
         "\n",
         "# Plot student essay in red\n",
         "ax.scatter(embeddings_3d[-1, 0], embeddings_3d[-1, 1], embeddings_3d[-1, 2],\n",
-        "           c='red', label='Student Essay', s=100)\n",
+        "           c='red', label='Student Essay', s=200, marker='*')\n",
         "\n",
         "# Highlight similarity using syntactic scores\n",
         "student_index = len(embeddings_3d) - 1\n",
@@ -13467,17 +13472,17 @@
         "}\n",
         "\n",
         "# Get frequencies for AI essays and calculate differences\n",
+        "print(\"\\nFrequency Analysis Summary:\")\n",
+        "print(\"-\" * 50)\n",
+        "print(\"Student Essay Distinctive Features:\")\n",
+        "print(f\"Top 20 words: {dict(sorted(student_freqs[0].items(), key=lambda x: x[1], reverse=True)[:20])}\")\n",
+        "print(f\"Unique bigrams: {len(student_freqs[1])}\")\n",
+        "\n",
+        "print(\"\\nAI Essays Comparison:\")\n",
         "for i, essay in enumerate(essay_list[1:]):\n",
         "    ai_freqs = get_freq_stats(essay, nlp)\n",
-        "\n",
-        "    # Store AI essay stats\n",
-        "    ai_stats = {\n",
-        "        'word_freq': ai_freqs[0],\n",
-        "        'bigram_freq': ai_freqs[1],\n",
-        "        'trigram_freq': ai_freqs[2]\n",
-        "    }\n",
-        "\n",
-        "    # Calculate comparison metrics\n",
+        "    \n",
+        "    # Calculate key metrics\n",
         "    student_bigrams = set(student_freqs[1].keys())\n",
         "    ai_bigrams = set(ai_freqs[1].keys())\n",
         "    bigram_overlap = len(student_bigrams.intersection(ai_bigrams)) / len(student_bigrams)\n",
@@ -13485,24 +13490,14 @@
         "    all_words = set(student_freqs[0].keys()).union(set(ai_freqs[0].keys()))\n",
         "    p = np.array([student_freqs[0].get(w, 0) for w in all_words])\n",
         "    q = np.array([ai_freqs[0].get(w, 0) for w in all_words])\n",
-        "    p = p / p.sum()  # normalize\n",
+        "    p = p / p.sum()\n",
         "    q = q / q.sum()\n",
         "    m = 0.5 * (p + q)\n",
         "    js_dist = 0.5 * (entropy(p, m) + entropy(q, m))\n",
         "\n",
-        "    ai_stats['bigram_overlap'] = bigram_overlap\n",
-        "    ai_stats['js_distance'] = js_dist\n",
-        "    essay_stats['ai'].append(ai_stats)\n",
-        "\n",
-        "    # Print stats\n",
-        "    print(f\"\\nEssay {i+1} frequency comparison:\")\n",
-        "    print(\"\\nTop 10 meaningful words:\")\n",
-        "    student_top = dict(sorted(student_freqs[0].items(), key=lambda x: x[1], reverse=True)[:10])\n",
-        "    ai_top = dict(sorted(ai_freqs[0].items(), key=lambda x: x[1], reverse=True)[:10])\n",
-        "    print(f\"Student essay: {student_top}\")\n",
-        "    print(f\"AI essay: {ai_top}\")\n",
-        "    print(f\"\\nBigram overlap ratio: {bigram_overlap:.3f}\")\n",
-        "    print(f\"Jensen-Shannon distance: {js_dist:.3f}\")"
+        "    print(f\"\\nEssay {i+1}:\")\n",
+        "    print(f\"Bigram overlap: {bigram_overlap:.3f} (>0.8 suggests AI)\")\n",
+        "    print(f\"JS distance: {js_dist:.3f} (closer to 0 suggests AI)\")"
       ]
     },
     {
@@ -14442,7 +14437,6 @@
         "    max_length = 512  # prevent OOM on long texts\n",
         "\n",
         "    # handle long sequences by splitting into chunks\n",
-        "    # long or small chunks more accurate?\n",
         "    stride = 512\n",
         "    nlls = []\n",
         "    for i in range(0, encodings.input_ids.size(1), stride):\n",
@@ -14464,17 +14458,28 @@
         "\n",
         "# calculate perplexity for student essay\n",
         "student_perplexity = calculate_perplexity(student_essay, gpt2_model, gpt2_tokenizer)\n",
-        "print(f\"\\nStudent essay perplexity: {student_perplexity:.2f}\")\n",
         "\n",
-        "# calculate and compare perplexity for AI essays\n",
+        "# calculate perplexity for AI essays\n",
         "ai_perplexities = []\n",
+        "ai_perplexity_diffs = []\n",
         "for i, essay in enumerate(essay_list[1:]):\n",
         "    ai_perplexity = calculate_perplexity(essay, gpt2_model, gpt2_tokenizer)\n",
         "    diff = ((ai_perplexity - student_perplexity) / student_perplexity) * 100\n",
-        "    # only print if AI essays with perplexity scores >20% lower than student\n",
-        "    if diff > 20:\n",
-        "        print(f\"AI essay {i+1} perplexity: {ai_perplexity:.2f} ({diff:+.1f}% vs student)\")\n",
-        "    ai_perplexities.append(ai_perplexity)\n"
+        "    ai_perplexity_diffs.append(diff)\n",
+        "    ai_perplexities.append(ai_perplexity)\n",
+        "\n",
+        "# print statistical summary\n",
+        "print(\"\\nPerplexity Analysis Summary:\")\n",
+        "print(f\"Student essay perplexity: {student_perplexity:.2f}\")\n",
+        "print(f\"AI essays mean perplexity: {np.mean(ai_perplexities):.2f}\")\n",
+        "print(f\"AI essays std perplexity: {np.std(ai_perplexities):.2f}\")\n",
+        "print(f\"Min AI perplexity: {min(ai_perplexities):.2f}\")\n",
+        "print(f\"Max AI perplexity: {max(ai_perplexities):.2f}\")\n",
+        "print(f\"\\nPerplexity Differences vs Student:\")\n",
+        "print(f\"Mean difference: {np.mean(ai_perplexity_diffs):.1f}%\")\n",
+        "print(f\"Std difference: {np.std(ai_perplexity_diffs):.1f}%\")\n",
+        "print(f\"Essays >20% lower than student: {sum(d < -20 for d in ai_perplexity_diffs)}\")\n",
+        "print(f\"Essays >20% higher than student: {sum(d > 20 for d in ai_perplexity_diffs)}\")"
       ]
     },
     {
@@ -14668,93 +14673,55 @@
         "# compare stylometry\n",
         "nlp = spacy.load(\"en_core_web_sm\")\n",
         "# Calculate stylometric features\n",
-        "def get_stylometric_features(text, nlp):\n",
-        "    doc = nlp(text)\n",
-        "    features = {\n",
-        "        'avg_sent_len': 0,\n",
-        "        'avg_word_len': 0,\n",
-        "        'lexical_density': 0,\n",
-        "        'function_words': 0,\n",
-        "        'punctuation_ratio': 0\n",
-        "    }\n",
+        "doc = nlp(text)\n",
+        "    features = {}\n",
         "\n",
-        "    # sentence and word length\n",
-        "    sent_lengths = [len([token for token in sent if token.is_alpha])\n",
-        "                    for sent in doc.sents]\n",
-        "    word_lengths = [len(token.text) for token in doc if token.is_alpha]\n",
+        "    # 1. Average sentence length\n",
+        "    sent_lengths = [len([token for token in sent if token.is_alpha]) for sent in doc.sents]\n",
         "    features['avg_sent_len'] = np.mean(sent_lengths) if sent_lengths else 0\n",
+        "\n",
+        "    # 2. Average word length\n",
+        "    word_lengths = [len(token.text) for token in doc if token.is_alpha]\n",
         "    features['avg_word_len'] = np.mean(word_lengths) if word_lengths else 0\n",
         "\n",
-        "    # lexical density (content words / total words)\n",
-        "    content_words = len([t for t in doc if not t.is_stop and t.is_alpha])\n",
+        "    # 3. Lexical density\n",
         "    total_words = len([t for t in doc if t.is_alpha])\n",
-        "    features['lexical_density'] = content_words / \\\n",
-        "        total_words if total_words > 0 else 0\n",
+        "    content_words = len([t for t in doc if not t.is_stop and t.is_alpha])\n",
+        "    features['lexical_density'] = content_words / total_words if total_words > 0 else 0\n",
         "\n",
-        "    # function word ratio\n",
+        "    # 4. Function word ratio\n",
         "    function_words = len([t for t in doc if t.is_stop])\n",
-        "    features['function_words'] = function_words / \\\n",
-        "        total_words if total_words > 0 else 0\n",
+        "    features['function_ratio'] = function_words / total_words if total_words > 0 else 0\n",
         "\n",
-        "    # punctuation ratio\n",
-        "    punct = len([t for t in doc if t.is_punct])\n",
-        "    features['punctuation_ratio'] = punct / len(doc) if len(doc) > 0 else 0\n",
+        "    # 5. Punctuation ratio\n",
+        "    punct_count = len([t for t in doc if t.is_punct])\n",
+        "    features['punct_ratio'] = punct_count / len(doc) if len(doc) > 0 else 0\n",
         "\n",
         "    return features\n",
         "\n",
+        "# Calculate features for all essays\n",
+        "student_style = get_stylometric_features(student_essay, nlp)\n",
+        "ai_styles = [get_stylometric_features(essay, nlp) for essay in essay_list[1:]]\n",
         "\n",
-        "# Calculate stylometric features and differences\n",
-        "def analyze_stylometry(student_essay, ai_essays, nlp):\n",
-        "    # Get features\n",
-        "    student_style = get_stylometric_features(student_essay, nlp)\n",
-        "    ai_styles = [get_stylometric_features(essay, nlp) for essay in ai_essays]\n",
+        "# Calculate differences\n",
+        "style_differences = []\n",
+        "for ai_style in ai_styles:\n",
+        "    diff = {}\n",
+        "    for key in student_style:\n",
+        "        if student_style[key] != 0:\n",
+        "            diff[key] = ((ai_style[key] - student_style[key]) / student_style[key]) * 100\n",
+        "        else:\n",
+        "            diff[key] = 0\n",
+        "    style_differences.append(diff)\n",
         "\n",
-        "    # Calculate differences\n",
-        "    differences = []\n",
-        "    for i, ai_style in enumerate(ai_styles):\n",
-        "        diff = {}\n",
-        "        for k in student_style:\n",
-        "            diff[k] = ((ai_style[k] - student_style[k]) /\n",
-        "                       student_style[k]) * 100 if student_style[k] != 0 else 0\n",
-        "        differences.append(diff)\n",
-        "\n",
-        "    return student_style, ai_styles, differences\n",
-        "\n",
-        "\n",
-        "# Run analysis\n",
-        "student_style, ai_styles, style_differences = analyze_stylometry(\n",
-        "    student_essay, essay_list[1:], nlp)\n",
-        "\n",
-        "# Print summary stats\n",
-        "print(\"\\nStudent essay stylometric features:\")\n",
+        "# Debug print to verify data\n",
+        "print(\"Student style features:\")\n",
         "for k, v in student_style.items():\n",
         "    print(f\"{k}: {v:.3f}\")\n",
         "\n",
-        "# compare with AI essays and identify suspicious differences\n",
-        "differences = []\n",
-        "threshold = 30  # threshold for suspicious differences (30%)\n",
-        "\n",
-        "for i, essay in enumerate(essay_list[1:]):\n",
-        "    ai_style = get_stylometric_features(essay, nlp)\n",
-        "    ai_styles.append(ai_style)\n",
-        "    suspicious_diffs = []\n",
-        "\n",
-        "    for k in student_style:\n",
-        "        diff = ((ai_style[k] - student_style[k]) / student_style[k]) * 100\n",
-        "        differences.append(diff)\n",
-        "        if abs(diff) > threshold:\n",
-        "            suspicious_diffs.append((k, diff))\n",
-        "\n",
-        "    # if suspicious_diffs[i] > 15:\n",
-        "    #     print(f\"\\nSuspicious differences in AI essay {i+1}:\")\n",
-        "    #     for feature, diff in suspicious_diffs:\n",
-        "    #         print(f\"{feature}: {diff:+.1f}%\")\n",
-        "\n",
-        "for sus_diff in suspicious_diffs:\n",
-        "    if sus_diff > 15:\n",
-        "        print(f\"\\nSuspicious differences in AI essay {i+1}:\")\n",
-        "        for feature, diff in suspicious_diffs:\n",
-        "            print(f\"{feature}: {diff:+.1f}%\")"
+        "print(\"\\nSample AI style features (first essay):\")\n",
+        "for k, v in ai_styles[0].items():\n",
+        "    print(f\"{k}: {v:.3f}\")"
       ]
     },
     {
